--- a/index.html
+++ b/index.html
@@ -3,42 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Website Template</title>
-    <style>
-        /* Add some basic styling */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        h1 {
-            color: #333;
-        }
-
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-    </style>
+    <title>Simple Website Template</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <button id="myButton">Click Me!</button>
-    <p id="message"></p>
-
-    <script>
-        // JavaScript code to add interaction
-        document.getElementById('myButton').addEventListener('click', function() {
-            document.getElementById('message').innerText = "Hello, World!";
-        });
-    </script>
+    <header>
+        <h1>GO FISH</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="search_by_name.html">Our fish</a></li>
+                <li><a href="suggest.html">Suggest</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="home">
+            <h2>Welcome to GO FISH</h2>
+            <p>For all your fish needs.</p>
+        </section>
+        <section id="about">
+            <h2>About Us</h2>
+            <p>Linda, Lennon and maxsim have worked hard together to create spaces for fish enthuisastics to come together and learn more about fishes and teach others.</p>
+        </section>
+        <section id="services">
+            <h2>Our Services</h2>
+            <p>Discover the services we offer.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Get in touch with us for more information.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
+    </footer>
 </body>
 </html>
-
