--- a/suggest.html
+++ b/suggest.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Website Template</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>GO FISH</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="search_by_name.html">Our fish</a></li>
+                <li><a href="suggest.html">Suggest</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="home">
+            <h2>Welcome to GO FISH</h2>
+            <p>For all your fish needs.</p>
+        </section>
+        <section id="about">
+            <h2>About Us</h2>
+            <p>Linda, Lennon and maxsim have worked hard together to create spaces for fish enthuisastics to come together and learn more about fishes and teach others.</p>
+        </section>
+        <section id="services">
+            <h2>Our Services</h2>
+            <p>Discover the services we offer.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Get in touch with us for more information.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
+    </footer>
+</body>
+</html>
