--- a/suggest.html
+++ b/suggest.html
@@ -83,22 +83,13 @@ footer {
         </nav>
     </header>
     <main>
-        <section id="home">
-            <h2>Welcome to GO FISH</h2>
-            <p>For all your fish needs.</p>
-        </section>
-        <section id="about">
-            <h2>About Us</h2>
-            <p>Linda, Lennon and maxsim have worked hard together to create spaces for fish enthuisastics to come together and learn more about fishes and teach others.</p>
-        </section>
-        <section id="services">
-            <h2>Our Services</h2>
-            <p>Discover the services we offer.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Get in touch with us for more information.</p>
-        </section>
+        <p>Get in touch with us for more information.</p>
+            <form>
+                <label for="name">Your Name:</label><br>
+                <input type="text" id="name" name="name"><br><br>
+                <label for="message">Your Message:</label><br>
+                <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
+                <input type="submit" value="Submit">
     </main>
     <footer>
         <p>&copy; 2024 My Website. All rights reserved.</p>
