final ver. suggest.html

--- a/suggest.html
+++ b/suggest.html
@@ -1,1 +1,116 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Suggest</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #2c94de;
+            color: #333;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            background-color: #333;
+            color: #2997f0;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+        main {
+            padding: 20px;
+        }
+        section {
+            margin-bottom: 20px;
+        }
+        h2 {
+            border-bottom: 2px solid #333;
+            padding-bottom: 10px;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>SUGGEST A FISH</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="search_by_name.html">Our fish</a></li>
+                <li><a href="suggest.html">Suggest</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <p>Suggest to us a fish and our experts may put it on the site!.</p>
+        <form id="suggestForm">
+            <label for="message">Your Message:</label><br>
+            <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
+            <input type="button" value="Save Draft" onclick="saveDraft()">
+            <input type="button" value="Load Draft" onclick="loadDraft()">
+            <input type="submit" value="Submit">
+        </form>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
+    </footer>
+    <script>
+        function saveDraft() {
+            var message = document.getElementById('message').value;
+            var draft = {
+                text: message,
+                timestamp: new Date().toISOString()
+            };
+            localStorage.setItem('draft', JSON.stringify(draft));
+            alert('Draft saved!');
+        }
+
+        function loadDraft() {
+            var draft = JSON.parse(localStorage.getItem('draft'));
+            if (draft) {
+                document.getElementById('message').value = draft.text;
+                alert('Draft loaded! Saved on: ' + draft.timestamp);
+            } else {
+                alert('No draft found.');
+            }
+        }
+
+        window.onload = function() {
+            loadDraft();
+        };
+    </script>
+</body>
+</html>
+
+
 
