--- a/search_by_name.html
+++ b/search_by_name.html
@@ -179,7 +179,7 @@
         document.getElementById("InfoBlockFish5").style.cssText="display:block;";
     }
     
-    //return false; // Prevent form submission
+    return false; // Prevent form submission
   }
 
 
